WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277018
[WebXR] webxr/xr-reference-space-event-crash.html is failing
https://bugs.webkit.org/show_bug.cgi?id=277018
Summary
[WebXR] webxr/xr-reference-space-event-crash.html is failing
Mike Wyrzykowski
Reported
2024-07-24 11:05:40 PDT
[WebXR] webxr/xr-reference-space-event-crash.html is failing
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-07-24 11:06:03 PDT
<
rdar://problem/132418680
>
Mike Wyrzykowski
Comment 2
2024-07-24 11:43:37 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31177
EWS
Comment 3
2024-07-24 16:14:50 PDT
Committed
281321@main
(6c80aab8214a): <
https://commits.webkit.org/281321@main
> Reviewed commits have been landed. Closing PR #31177 and removing active labels.
EWS
Comment 4
2024-07-25 16:16:20 PDT
Committed
280938.126@safari-7619-branch
(83274df15620): <
https://commits.webkit.org/280938.126@safari-7619-branch
> Reviewed commits have been landed. Closing PR #1494 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug