[WebXR] webxr/xr-reference-space-event-crash.html is failing https://bugs.webkit.org/show_bug.cgi?id=277018 <radar://132418680>

Reviewed by Chris Dumez and Dan Glastonbury.

Inline preview should not be dependent on the prompt being accepted.

* Source/WebKit/UIProcess/XR/PlatformXRSystem.cpp:
(WebKit::PlatformXRSystem::requestPermissionOnSessionFeatures):

Canonical link: https://commits.webkit.org/281321@main